--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "2.0.0-rc.2",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.2",
+    "angular2-tree-component": "^1.1.6",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
+    "lodash": "^4.13.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
@@ -35,7 +37,6 @@
     "gulp-npm-files": "^0.1.3",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^4.3.3",
     "gulp-typescript": "^2.13.6",
     "gulp-watch": "^4.3.8",
     "lite-server": "^2.2.0",
