--- a/bs-config.json
+++ b/bs-config.json
@@ -1,5 +1,6 @@
 {
-  "port": 8000,
+  "https": true,
+  "port": 443,
   "files": [
     "build/**/*.{html,htm,css,js}",
     "!build/node_modules/**"
