--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.4",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "^0.6.17"
 
-    "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
-    "lodash": "^4.13.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "concurrently": "^2.2.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^1.9.0-dev.20160624-1.0",
+    "typings": "^1.3.2",
+
+    "nodemon": "^1.9.2",
+    "run-sequence": "^1.2.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-debug": "^2.1.2",
@@ -40,10 +40,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "gulp-watch": "^4.3.8",
-    "lite-server": "^2.2.0",
-    "nodemon": "^1.9.2",
-    "run-sequence": "^1.2.1",
-    "typescript": "^1.9.0-dev.20160624-1.0",
-    "typings": "^1.0.4"
+
+    "webpack": "^1.13.2"
   }
 }
